--- a/drivers/input/touchscreen/oplus_touchscreen_v2/Makefile
+++ b/drivers/input/touchscreen/oplus_touchscreen_v2/Makefile
@@ -17,5 +17,6 @@ obj-$(CONFIG_TOUCHPANEL_OPLUS) += oplus_bsp_tp_comon.o
 oplus_bsp_tp_notify-y += touchpanel_notify/touchpanel_event_notify.o
 obj-$(CONFIG_TOUCHPANEL_NOTIFY) += oplus_bsp_tp_notify.o
 
+obj-$(CONFIG_TOUCHPANEL_FOCAL) += Focal/
 obj-$(CONFIG_TOUCHPANEL_SYNAPTICS) += Synaptics/
 obj-$(CONFIG_TOUCHPANEL_ST) += St/
