--- a/security/selinux/Kconfig
+++ b/security/selinux/Kconfig
@@ -47,11 +47,7 @@ config SECURITY_SELINUX_DISABLE
 config SECURITY_SELINUX_DEVELOP
 	bool "NSA SELinux Development Support"
 	depends on SECURITY_SELINUX
-	#ifndef OPLUS_FEATURE_FORCE_SELINUX
-	#default y
-	#else OPLUS_FEATURE_FORCE_SELINUX
-	default n
-	#endif OPLUS_FEATURE_FORCE_SELINUX
+	default y
 	help
 	  This enables the development support option of NSA SELinux,
 	  which is useful for experimenting with SELinux and developing
